--- a/product2.html
+++ b/product2.html
@@ -4,9 +4,9 @@
             <meta charset="UTF-8" />
             <meta http-equiv="X-UA_Compatible" content="IE-edge" />
             <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-            <title> Specifc Skin Issues </title>
+            <title> Product </title>
             <!-- main css -->
-            <link rel="stylesheet" href="style.css" />
+            <link rel="stylesheet" href="../style.css" />
         </head>
         <body>
             <ul class="navbar">
@@ -21,25 +21,12 @@
                 <li><a href="issues.html"> Specifc Issues </a></li>
                 <li><a href="routine.html"> Routine</a></li>
             </ul>
-            <div class="issue-image">
-                <div class="home-text">
-                    <h1> Specifc Skin Issues </h1>
-                </div>
             </div>
             <div class="textblock" style="text-align: center">
-                <h2>Specifc Skin Issues: </h2>
-                <div class="issue-Info">
+                <h2>Product</h2>
                     <h3> 
-                        <ul>
-                            <li> To do
-                            </li>
-                            </li>
-                        </ul>
+                        To do 2  
                     </h3>
-                </div>
-            </div>
-
-
         </body>
     </html>
-    </DOCTYPE>
+</DOCTYPE>
