--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <body>
         <ul class="navbar">
             <li><a href="index.html"> Home </a></li>
-            <li><a href="products.html"> Products </a></li>
+            <li><a href="products.html"> Products </a>
+                <ul class="dropdown">
+                    <li><a href="product1.html"> Product 1 </a></li>
+                    <li><a href="product2.html"> Product 2 </a></li>
+                    <li><a href="product3.html"> Product 3 </a></li>
+                </ul>
+            </li>
             <li><a href="issues.html"> Specifc Issues </a></li>
             <li><a href="routine.html"> Routine</a></li>
         </ul>
