--- a/product1.html
+++ b/product1.html
@@ -13,20 +13,50 @@
                 <li><a href="index.html"> Home </a></li>
                 <li><a href="products.html"> Products </a>
                     <ul class="dropdown">
-                        <li><a href="product1.html"> Product 1 </a></li>
-                        <li><a href="product2.html"> Product 2 </a></li>
-                        <li><a href="product3.html"> Product 3 </a></li>
+                        <li><a href="product1.html"> Cleanser </a></li>
+                        <li><a href="product2.html"> Serum </a></li>
+                        <li><a href="product3.html"> Moisturizer </a></li>
                     </ul>
                 </li>
                 <li><a href="issues.html"> Specifc Issues </a></li>
                 <li><a href="routine.html"> Routine</a></li>
             </ul>
             </div>
+            <div class="products-image">
+                <div class="home-text">
+                    <h1> Cleanser </h1>
+                </div>
+            </div>
             <div class="textblock" style="text-align: center">
-                <h2>Product</h2>
+                <h2>What is cleanser?</h2>
+                <div class="routine-Info">
                     <h3> 
-                        To do 1  
+                        To do
+                        </ul>
                     </h3>
+                </div>
+                <h4>Cleansers for Dry Skin</h4>
+                <div class="routine-Info">
+                    <h3> 
+                        To do
+                        </ul>
+                    </h3>
+                </div>
+                <h4>Cleansers for Oily Skin</h4>
+                <div class="routine-Info">
+                    <h3> 
+                        To do
+                        </ul>
+                    </h3>
+                </div>
+                <h4>Cleansers for Dry and Oily Skin</h4>
+                <div class="routine-Info">
+                    <h3> 
+                        To do
+                        </ul>
+                    </h3>
+                </div>
+            </div>
         </body>
     </html>
 </DOCTYPE>
