--- a/products.html
+++ b/products.html
@@ -13,9 +13,9 @@
                 <li><a href="index.html"> Home </a></li>
                 <li><a href="products.html"> Products </a>
                     <ul class="dropdown">
-                        <li><a href="product1.html"> Product 1 </a></li>
-                        <li><a href="product2.html"> Product 2 </a></li>
-                        <li><a href="product3.html"> Product 3 </a></li>
+                        <li><a href="product1.html"> Cleanser </a></li>
+                        <li><a href="product2.html"> Serum </a></li>
+                        <li><a href="product3.html"> Moisturizer </a></li>
                     </ul>
                 </li>
                 <li><a href="issues.html"> Specifc Issues </a></li>
@@ -31,14 +31,15 @@
             <div class="Product-List">
                 <ul>
                     <div class="photogrid">
-                        <img src="Images/temp.jpg" alt= "Product 1"  height="20%">
-                        <li class="Product-li"><a href="Products/product1.html">&nbsp;&nbsp;&nbsp;&nbsp;Product 1</a></li>
-                        <img src="Images/temp.jpg" alt= "Product 2"  height="20%">
-                        <li class="Product-li"><a href="Products/product2.html">&nbsp;&nbsp;&nbsp;&nbsp;Product 2</a></li>
-                        <img src="Images/temp.jpg" alt= "Product 3"  height="20%">
-                        <li class="Product-li"><a href="Products/product3.html">&nbsp;&nbsp;&nbsp;&nbsp;Product 3</a></li>
+                        <div class="row">
+                            <div class="column">
+                        <img src="Images/cleanser.jpg" alt= "Cleanser"  height="25%">
+                        <li class="Product-li"><a href="product1.html">&nbsp;&nbsp;&nbsp;&nbsp;Cleanser</a></li>
+                        <img src="Images/serum.jpg" alt= "Serum"  height="30%">
+                        <li class="Product-li"><a href="product2.html">&nbsp;&nbsp;&nbsp;&nbsp;Serum</a></li>
+                        <img src="Images/moisturizer.jpg" alt= "Moisturizer"  height="25%">
+                        <li class="Product-li"><a href="product3.html">&nbsp;&nbsp;&nbsp;&nbsp;Moisturizer</a></li>
                       </div>
-
                      </div>
                     </div>
                     
