--- a/routine.html
+++ b/routine.html
@@ -13,9 +13,9 @@
                 <li><a href="index.html"> Home </a></li>
                 <li><a href="products.html"> Products </a>
                     <ul class="dropdown">
-                        <li><a href="product1.html"> Product 1 </a></li>
-                        <li><a href="product2.html"> Product 2 </a></li>
-                        <li><a href="product3.html"> Product 3 </a></li>
+                        <li><a href="product1.html"> Cleanser </a></li>
+                        <li><a href="product2.html"> Serum </a></li>
+                        <li><a href="product3.html"> Moisturizer </a></li>
                     </ul>
                 </li>
                 <li><a href="issues.html"> Specifc Issues </a></li>
