--- a/product1.html
+++ b/product1.html
@@ -4,9 +4,9 @@
             <meta charset="UTF-8" />
             <meta http-equiv="X-UA_Compatible" content="IE-edge" />
             <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-            <title> Product </title>
+            <title> Cleanser </title>
             <!-- main css -->
-            <link rel="stylesheet" href="../style.css" />
+            <link rel="stylesheet" href="style.css" />
         </head>
         <body>
             <ul class="navbar">
@@ -30,31 +30,30 @@
             <div class="textblock" style="text-align: center">
                 <h2>What is cleanser?</h2>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        Facial cleansers provide several benefits for the skin: removing dirt, oil, and other bacteria. They cleanse clogged pores and prevent many skin problems like acne. Repeated use of cleansers keeps the skin clean and healthy. Additionally, cleansers usually exfoliate the skin, which removes dead skin cells. Overall, facial cleaners operate as an essential first step in skin care routines.
+                    </h5>
                 </div>
-                <h4>Cleansers for Dry Skin</h4>
+                <h4><br>Cleansers for Dry Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        For dry skin, the right cleanser helps avoid dehydration. Oil-based or cream cleansers work to hydrate and nourish the skin. Oil cleansers give the skin more oils since those with dry skin may be not producing enough natural oils. On the other hand, cream cleansers are similar. They hydrate the skin while usually lacking harsher ingredients that overwhelm sensitive and dry skin. Overall, these cleansers hydrate and clean the skin simultaneously.<br>
+                        <strong>Top Products:</strong> CeraVe Cream-to-Foam Cleanser, Aveeno Nourishing Oat Cleanser (oil-based), La Roche-Posay Hydrating Gentle Cleanser
+                    </h5>
                 </div>
-                <h4>Cleansers for Oily Skin</h4>
+                <h4><br>Cleansers for Oily Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        Unlike dry skin, oil-based and cream cleansers do not work as well for oily skin. Rather,         foam, bar, and clay cleansers control oil production and clean it. Cleansers with salicylic acid unclog pores and help with excess oil. However, overusing cleansers with this ingredient may dehydrate the skin, so avoiding this is necessary. Maintaining the balance of removing excess oil while not drying out the skin is what you must manage regarding cleansers for oily skin.<br>
+                        <strong>Top Products:</strong> CeraVe Foam Cleanser, The Ordinary Glucoside Squalane Cleanser (clay cleanser)
+                    </h5>
                 </div>
-                <h4>Cleansers for Dry and Oily Skin</h4>
+                <h4><br>Cleansers for Dry and Oily Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        For a combination of skin types, gel cleansers help with oily and dry skin since they have a balanced ph level. However, you can use foam, bar, and clay cleansers too. Hyaluronic acid is an ingredient to consider when choosing the best cleanser for your skin. It hydrates the skin without adding too much oil. In essence, choosing one of these cleansers will remove the extra dirt and buildup on the face and help combination skin both remove excess oil and prevent dryness.<br>
+                        <strong>Top Products:</strong> iS Clinical Cleansing Complex (gel cleanser), Olivia Care Vitamin C Cleanser
+                    </h5>
                 </div>
             </div>
         </body>
