--- a/product2.html
+++ b/product2.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8" />
             <meta http-equiv="X-UA_Compatible" content="IE-edge" />
             <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-            <title> Product </title>
+            <title> Serum </title>
             <!-- main css -->
             <link rel="stylesheet" href="../style.css" />
         </head>
@@ -30,31 +30,39 @@
             <div class="textblock" style="text-align: center">
                 <h2>What is serum?</h2>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        Serums are liquids filled with concentrations of ingredients that can help with skincare goals and help prevent blemishes and aging. Even if you do not have a specific concern, everyone can benefit from using a general antioxidant serum in their routine. Serums are applied after cleansing and before moisturizing, to dry or damp skin depending on the product. The time of day they should be applied also depends on the product. They usually come in small bottles with droppers to apply a few drops to the skin.<br>
+                    </h5>
                 </div>
-                <h4>Serum for Dry Skin</h4>
+                <h4><br>Serum for Dry Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        The focus of serums for dry skin should be locking in moisture often lost throughout the day to maintain hydration. Some examples of chemicals that help keep the skin hydrated and heal your skin barrier include hyaluronic acid and niacinamide.<br>
+                        <strong>Hyaluronic acid:</strong><br>
+                        Hyaluronic acid is produced naturally by the human body, however, production slows with age. It works to retain moisture not only in the skin but also in the body’s connective tissue by attracting and binding to water molecules. Hyaluronic acid serum should be applied to the skin while it is still wet so the water molecules can be trapped in the skin. It is important to avoid applying it to dry skin as it can pull water molecules from inside your skin and dry it further. This chemical is most useful to those with dry and flaky skin.<br>
+                        <strong>Top Products:</strong> The INKEY List Hyaluronic Acid Hydrating Serum, The Ordinary Hyaluronic Acid Serum<br>
+                        <strong>Niacinamide:</strong><br>
+                        Niacinamide is a type of vitamin B3, which can be produced naturally by the human body, that helps build keratin to repair skin. While hyaluronic acid traps water on your skin to keep it moisturized, niacinamide boosts hydration by enhancing the function of your skin barrier itself. Your skin barrier is a layer of water and oil on the surface of your skin that protects it by locking in moisture and keeping out potential irritants. Niacinamide can be applied to damp or dry skin. This chemical is most useful to those who suffer from inflammation and irritation from their dry skin.<br>
+                        <strong>Top Products:</strong> Good Molecules Niacinamide Serum, The INKEY List 10% Niacinamide Serum
+                    </h5>
                 </div>
-                <h4>Serum for Oily Skin</h4>
+                <h4><br>Serum for Oily Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        The focus of serums for oily skin should be reducing sebum (oil) production and preventing acne breakouts, without irritating or drying out your skin. Salicylic acid is an example of a great exfoliant and antibacterial agent. Salicylic acid serums can sometimes also be found in combinations with other chemicals, such as niacinamide, to ensure it does not dry out your skin.<br>
+                        <strong>Salicylic Acid:</strong><br>
+                        Salicylic acid is not naturally produced by the body, but occurs naturally in plants. Acne is caused by excess sebum production and buildup of dead skin cells. Salicylic acid unblocks your clogged pores by breaking the bonds between dead skin cells to release them. It also blocks sebum production to prevent future breakouts. It can be applied to dry or damp skin. This chemical is most useful to those who want to prevent excess oil production and acne breakouts.<br>
+                        <strong>Top Products:</strong> The Ordinary Salicylic 2% Exfoliating Blemish Solution, Minimalist 2% Salicylic Acid Serum
+                    </h5>
                 </div>
-                <h4>Serum for Normal Skin</h4>
+                <h4><br>Serum for Normal Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        The focus of serums for normal skin should be brightening and protecting the skin from aging and other possible damage. Vitamin C is an example of a great antioxidant and brightening agent.<br>
+                        <strong>Vitamin C:</strong><br>
+                        Vitamin C fights harmful free radicals that you are exposed to on a daily basis, both from your environment and within your own body. It controls sebum (oil) production, which prevents acne breakouts, and acts as an anti-inflammatory agent.  Overall, it protects your skin while also giving it a brighter and less textured appearance. It can be applied to dry or damp skin. This chemical is most useful to those who want to keep their skin looking healthy and reduce texture.<br>
+                        <strong>Top Products:</strong> The INKEY List 30% Vitamin C Serum, Minimalist 10% Vitamin C Face Serum
+                    </h5>
                 </div>
             </div>
         </body>
