--- a/product3.html
+++ b/product3.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8" />
             <meta http-equiv="X-UA_Compatible" content="IE-edge" />
             <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-            <title> Product </title>
+            <title> Moisturizer </title>
             <!-- main css -->
             <link rel="stylesheet" href="../style.css" />
         </head>
@@ -30,31 +30,30 @@
             <div class="textblock" style="text-align: center">
                 <h2>What is moisturizer?</h2>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        Moisturizers are lotions that keep your skin soft and hydrated throughout the day. It is an important step for people of all skin types, as cleansing your face removes moisture and aging reduces our ability to retain moisture. Some moisturizers also include built-in broad spectrum SPF to protect your skin from the sun during the day. This can make it easier to keep your skin safe without having to include an extra step in your routine.
+                    </h5>
                 </div>
-                <h4>Moisturizers for Dry Skin</h4>
+                <h4><br>Moisturizers for Dry Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        The focus of moisturizers for dry skin should be locking in moisture from your serums and softening your skin. Heavier cream or lotion moisturizers advertised for dry skin are the best options. Some beneficial ingredients are hyaluronic acid, niacinamide, and glycerin. Glycerin is a chemical that helps form a layer of moisture over your skin and prevents flaking. Hyaluronic acid and niacinamide can also be found in serums.<br>
+                        <strong>Top Products:</strong> First Aid Beauty Ultra Repair Cream Intense Hydration Moisturizer, CeraVe Daily Moisturizing Lotion for Normal to Dry Skin
+                    </h5>
                 </div>
-                <h4>Moisturizers for Oily Skin</h4>
+                <h4><br>Moisturizers for Oily Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        The focus of moisturizers for oily skin should be to retain moisture while avoiding the overproduction of sebum. Lighter cream or lotion moisturizers advertised for oily skin are the best options. It is important to make sure your moisturizer is oil-free or non-comedogenic, which means it will not clog your pores.<br>
+                        <strong>Top Products:</strong> Differin Oil Absorbing Moisturzier, First Aid Beauty Ultra Repair Oil Control Moisturizer
+                    </h5>
                 </div>
-                <h4>Moisturizers for Normal Skin</h4>
+                <h4><br>Moisturizers for Normal Skin</h4>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
-                    </h3>
+                    <h5> 
+                        The focus of moisturizers for normal skin should be to retain moisture and keep your skin soft. For normal skin, the consistency of your moisturizer is not as important as it is for the other two skin types. Some beneficial ingredients are hyaluronic acid, niacinamide, and glycerin. Glycerin is a chemical that helps form a layer of moisture over your skin and prevents flaking. Hyaluronic acid and niacinamide can also be found in serums. It is a good idea to make sure your moisturizer is oil-free or non-comedogenic, which means it will not clog your pores.<br>
+                        <strong>Top Products:</strong> CeraVe Daily Moisturizing Lotion for Normal to Dry Skin, Paula’s Choice Oil-Free Moisturizer
+                    </h5>
                 </div>
             </div>
         </body>
