--- a/products.html
+++ b/products.html
@@ -22,7 +22,7 @@
                 <li><a href="routine.html"> Routine</a></li>
             </ul>
             
-            <div class="Product-image">
+            <div class="Products-image">
                 <div class="home-text">
                     <h1> Products </h1>
                 </div>
