--- a/routine.html
+++ b/routine.html
@@ -27,12 +27,36 @@
                 </div>
             </div>
             <div class="textblock" style="text-align: center">
-                <h2>Routine Chart </h2>
+                <h2>General Skin Care Routine</h2>
                 <div class="routine-Info">
-                    <h3> 
-                        To do
-                        </ul>
+                    <h5>
+                        This skincare routine can be followed in the morning when you wake up or at night before bed. It is recommended that you follow this twice a day, once in the morning and once at night.
+                    </h5>
+                    <h3>
+                        Step 1 - Cleanser
                     </h3>
+                    <h5>
+                        When using cleanser, you want to be very gentle as to not irritate the skin which means you should not use anything but your clean hands. Follow these simple steps: <br>
+                        1. Wet your face with warm water.<br>
+                        2. Gently rub cleanser into your skin while being sure to not irritate your skin.<br>
+                        3. Once you have thoroughly cleaned your skin, rinse your face with warm water.<br>
+                        4. Finally, use a soft cloth and pat dry your skin.
+                    </h5>
+                    <h3>
+                        Step 2 - Serum
+                    </h3>
+                    <h5>
+                        After successfully cleansing your face, the next step in your skincare routine is serum. Follow these simple steps:<br>
+                        1. Pump a small amount of serum in your hands and rub them together.<br>
+                        2. Gently apply the serum to your skin in a circular motion and spend a little extra time in particularly problematic spots.<br>
+                        3. Once you are done, allow the serum to dry. Do not rinse your skin or wipe it off.
+                    </h5>
+                    <h3>
+                        Step 3 - Moisturizer
+                    </h3>
+                    <h5>
+                        Once the serum is dry, you can pump a good amount of moisturizer and gently rub it in to your skin. That's it, you have completed your skincare routine!
+                    </h5>
                 </div>
             </div>
             
