--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="product3.html"> Moisturizer </a></li>
                 </ul>
             </li>
-            <li><a href="issues.html"> Specifc Issues </a></li>
+            <li><a href="issues.html"> Specific Issues </a></li>
             <li><a href="routine.html"> Routine</a></li>
         </ul>
         <div class="home-image">
@@ -29,11 +29,13 @@
         <div class="textblock" style="text-align: center">
             <h2>Motivation</h2>
                 <h3> 
-                    To do   
+                    Many people become overwhelmed when dealing with skincare due to the abundant amount of information and misinformation available online. We created this website as a beginners guide for those interested in starting to properly take care of their skin. Our guide contains the essential products and information required to start a basic skin routine. Let's keep our bodies' largest organ healthy!   
                 </h3>
         </div>
-        <h6><a href="https://github.com/MAB688/skincare-guide" target="_blank"> Github Repository </a></h6>
-
+        <div class="textblock" style="text-align:center">
+            <a href="https://github.com/MAB688/skincare-guide" target="_self"> Github Repository </a>
+            <footer>
+            </footer>
     </body>
 </html>
 </DOCTYPE>
