--- a/product1.html
+++ b/product1.html
@@ -18,7 +18,7 @@
                         <li><a href="product3.html"> Moisturizer </a></li>
                     </ul>
                 </li>
-                <li><a href="issues.html"> Specifc Issues </a></li>
+                <li><a href="issues.html"> Specific Issues </a></li>
                 <li><a href="routine.html"> Routine</a></li>
             </ul>
             </div>
@@ -30,9 +30,9 @@
             <div class="textblock" style="text-align: center">
                 <h2>What is cleanser?</h2>
                 <div class="routine-Info">
-                    <h5> 
+                    <h6> 
                         Facial cleansers provide several benefits for the skin: removing dirt, oil, and other bacteria. They cleanse clogged pores and prevent many skin problems like acne. Repeated use of cleansers keeps the skin clean and healthy. Additionally, cleansers usually exfoliate the skin, which removes dead skin cells. Overall, facial cleaners operate as an essential first step in skin care routines.
-                    </h5>
+                    </h6>
                 </div>
                 <h4><br>Cleansers for Dry Skin</h4>
                 <div class="routine-Info">
@@ -56,6 +56,8 @@
                     </h5>
                 </div>
             </div>
+            <footer>
+            </footer>
         </body>
     </html>
 </DOCTYPE>
