--- a/product2.html
+++ b/product2.html
@@ -18,7 +18,7 @@
                         <li><a href="product3.html"> Moisturizer </a></li>
                     </ul>
                 </li>
-                <li><a href="issues.html"> Specifc Issues </a></li>
+                <li><a href="issues.html"> Specific Issues </a></li>
                 <li><a href="routine.html"> Routine</a></li>
             </ul>
             </div>
@@ -30,9 +30,9 @@
             <div class="textblock" style="text-align: center">
                 <h2>What is serum?</h2>
                 <div class="routine-Info">
-                    <h5> 
+                    <h6> 
                         Serums are liquids filled with concentrations of ingredients that can help with skincare goals and help prevent blemishes and aging. Even if you do not have a specific concern, everyone can benefit from using a general antioxidant serum in their routine. Serums are applied after cleansing and before moisturizing, to dry or damp skin depending on the product. The time of day they should be applied also depends on the product. They usually come in small bottles with droppers to apply a few drops to the skin.<br>
-                    </h5>
+                    </h6>
                 </div>
                 <h4><br>Serum for Dry Skin</h4>
                 <div class="routine-Info">
@@ -65,6 +65,8 @@
                     </h5>
                 </div>
             </div>
+            <footer>
+            </footer>
         </body>
     </html>
 </DOCTYPE>
