--- a/product3.html
+++ b/product3.html
@@ -18,7 +18,7 @@
                         <li><a href="product3.html"> Moisturizer </a></li>
                     </ul>
                 </li>
-                <li><a href="issues.html"> Specifc Issues </a></li>
+                <li><a href="issues.html"> Specific Issues </a></li>
                 <li><a href="routine.html"> Routine</a></li>
             </ul>
             </div>
@@ -30,9 +30,9 @@
             <div class="textblock" style="text-align: center">
                 <h2>What is moisturizer?</h2>
                 <div class="routine-Info">
-                    <h5> 
+                    <h6> 
                         Moisturizers are lotions that keep your skin soft and hydrated throughout the day. It is an important step for people of all skin types, as cleansing your face removes moisture and aging reduces our ability to retain moisture. Some moisturizers also include built-in broad spectrum SPF to protect your skin from the sun during the day. This can make it easier to keep your skin safe without having to include an extra step in your routine.
-                    </h5>
+                    </h6>
                 </div>
                 <h4><br>Moisturizers for Dry Skin</h4>
                 <div class="routine-Info">
@@ -56,6 +56,8 @@
                     </h5>
                 </div>
             </div>
+            <footer>
+            </footer>
         </body>
     </html>
 </DOCTYPE>
