Fixed wording issue in the disclaimer

--- a/issues.html
+++ b/issues.html
@@ -83,7 +83,7 @@
             <h7><br>Disclaimer</h7>
             <div class="routine-Info">
                 <h6> 
-                    Severe cases of the following skin conditions require medical attention and may require medically prescribed treatments. The following information regards solely available over-the-counter products that contain pain and symptom reducing ingredients. Always consult your doctor if symptoms are severe or worsen. The following does not contain medical information or advice, but rather an overview of some skin conditions and possible over-the-counter symptom reducers. 
+                    Severe cases of the listed skin conditions require medical attention and may require medically prescribed treatments. The listed information regards solely available over-the-counter products that contain pain and symptom reducing ingredients. Always consult your doctor if symptoms are severe or worsen. The listed information is not medical information or advice, but rather an overview of some skin conditions and possible over-the-counter symptom reducers. 
                 </h6>
         </div>
             <footer>
