--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="textblock" style="text-align: center">
             <h2>Motivation</h2>
                 <h3> 
-                    Many people become overwhelmed when dealing with skincare due to an overabundance of information and misinformation available online. We created this website as an entry level guide for those just getting starting with proper skincare. Our guide contains the essential products and information required to start a basic skin routine. Let's keep our bodies' largest organ healthy!   
+                    Many people become overwhelmed when dealing with skincare due to an overabundance of information and misinformation available online. We created this website as an entry level guide for those just getting starting with proper skincare. Our guide contains the essential products and information required to start a basic skin routine. Let's keep the bodies' largest organ healthy!   
                 </h3>
         </div>
         <div class="textblock" style="text-align:center">
