--- a/routine.html
+++ b/routine.html
@@ -33,7 +33,7 @@
                         This skincare routine can be followed in the morning when you wake up or at night before bed. It is recommended that you follow this twice a day, once in the morning and once at night.
                     </h3>
                     <h4>
-                        <br>  1 - Cleanser
+                        <br> Step 1 - Cleanser
                     </h4>
                     <h5>
                         When using cleanser, you want to be very gentle as to not irritate the skin which means you should not use anything but your clean hands. Follow these simple steps: <br>
@@ -52,7 +52,7 @@
                         3. Once you are done, allow the serum to dry. Do not rinse your skin or wipe it off.
                     </h5>
                     <h4>
-                        <br> 3 - Moisturizer
+                        <br> Step 3 - Moisturizer
                     </h4>
                     <h5>
                         Once the serum is dry, you can pump a good amount of moisturizer and gently rub it in to your skin. That's it, you have completed your skincare routine!
